--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,7 @@
 
 html {
     scroll-behavior: smooth;
+
 }
 
 body {
@@ -90,6 +91,7 @@ body {
     font-size: var(--normal-font-size);
     background-color: var(--body-color);
     color: var(--text-color);
+
 }
 
 h1,
@@ -123,6 +125,7 @@ textarea {
 .section {
     padding: 6rem 0 5rem;
 
+
 }
 
 .section-title {
@@ -138,7 +141,6 @@ textarea {
     max-width: 768px;
     margin-left: auto;
     margin-right: auto;
-
 }
 
 .grid {
@@ -249,7 +251,7 @@ textarea {
 
 .nav-menu {
     margin-left: auto;
-    top:  calc(var(--header-height) + 1.5rem);
+    top: calc(var(--header-height) + 1.5rem);
     right: -100%;
 }
 
@@ -281,7 +283,6 @@ header {
 .banner-content {
     grid-template-columns: 2fr 2fr;
     align-items: center;
-    
     column-gap: 4rem;
 }
 
@@ -363,8 +364,8 @@ header {
 
 /*==================== Footer ====================*/
 footer {
-    text-align: center;
     padding-bottom: 2rem;
+    text-align: center;
 }
 
 /* Comienzo plantilla parte 2*/
@@ -376,6 +377,11 @@ footer {
         margin-left: var(--mb-1);
         margin-right: var(--mb-1);
     }
+
+    .contact-data {
+        display: block;
+     
+    }
 }
 
 @media screen and (max-width: 668px) {
@@ -386,7 +392,7 @@ footer {
         width: 100%;
         background-color: var(--body-color);
         padding: 0 1rem 1rem;
-        transition: .3s;     
+        transition: .3s;
     }
 
     .nav-list {
@@ -462,4 +468,25 @@ footer {
 
 ::-webkit-scrollbar-thumb:hover {
     background-color: var(--text-color-light);
+}
+
+/* Pagina  de contacto*/
+
+.contact-data {
+    padding-top: 2rem;
+    grid-template-columns: 2fr 1.5fr;
+    column-gap: 0;
+}
+
+.contact-data-title {
+    padding-top: var(--mb-0-5);
+}
+
+.mapa {
+    padding-top: var(--mb-0-5);
+}
+
+.form{
+    margin: 0;
+    padding: 0;
 }
