--- a/css/main.css
+++ b/css/main.css
@@ -122,7 +122,7 @@ textarea {
 }
 
 .fas, .fab{
-    font-size: 1.25rem;
+    font-size: 1.5rem;
     color: var(--title-color);
 }
 
@@ -270,7 +270,7 @@ body.dark-theme {
 .nav-toggle {
    
     cursor: pointer;
-    margin-left: var(--mb-1);
+    margin-left: var(--mb-1-5);
 }
 
 .nav-toggle:hover {
@@ -292,12 +292,14 @@ body.dark-theme {
 .nav-list {
     display: flex;
     column-gap: 2rem;
+   
 }
 
 .nav-menu {
     margin-left: auto;
     top: calc(var(--header-height) + 1.5rem);
     right: -100%;
+   
 }
 
 /* show menu */
@@ -514,22 +516,23 @@ footer {
 
     .nav-menu {
         position: fixed;
-        left: 0;
         width: 100%;
         background-color: var(--body-color);
         padding: 0 1rem 1rem;
-        transition: .3s;
+        transition: .1s;
+        height: 100%;
     }
 
     .nav-list {
         display: block;
+
     }
 
     .nav-link {
         display: flex;
         flex-direction: column;
-        align-items: flex-end;
-        font-size: var(--small-font-size);
+        align-items: flex-start;
+        font-size: var(--normal-font-size);
         font-weight: var(--font-medium);
         padding-top: var(--mb-1);
         padding-bottom: var(--mb-1);
@@ -539,7 +542,7 @@ footer {
         display: block;
     }
 
-
+    
 
     .nosotros-main {
         grid-template-columns: 1fr;
