--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,15 @@
 /*==================== GOOGLE FONTS ====================*/
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 
 /*==================== VARIABLES CSS ====================*/
+
 :root {
     --header-height: 3rem;
-
     /*========== Colors ==========*/
     /* Change favorite color */
     --hue-color: 250;
     /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
-
     /* HSL color mode */
     --first-color: hsl(var(--hue-color), 69%, 51%);
     --first-color-second: hsl(var(--hue-color), 69%, 61%);
@@ -24,11 +24,9 @@
     --scroll-bar-color: hsl(var(--hue-color), 12%, 90%);
     --scroll-thumb-color: hsl(var(--hue-color), 12%, 80%);
     --container-color: #FFF;
-
     /*========== Font and typography ==========*/
     --body-font: 'Poppins', sans-serif;
     ;
-
     /* .5rem = 8px, 1rem = 16px, 1.5rem = 24px ... */
     --big-font-size: 2rem;
     --h1-font-size: 1.5rem;
@@ -37,11 +35,9 @@
     --normal-font-size: .938rem;
     --small-font-size: .813rem;
     --smaller-font-size: .75rem;
-
     /*========== Font weight ==========*/
     --font-medium: 500;
     --font-semi-bold: 600;
-
     /*========== Margenes Bottom ==========*/
     /* .25rem = 4px, .5rem = 8px, .75rem = 12px ... */
     --mb-0-25: .25rem;
@@ -52,16 +48,17 @@
     --mb-2: 2rem;
     --mb-2-5: 2.5rem;
     --mb-3: 3rem;
-
     /*========== z index ==========*/
     --z-tooltip: 10;
     --z-fixed: 100;
     --z-modal: 1000;
 }
 
+
 /* Font size for large devices */
+
 @media screen and (min-width: 968px) {
-    :root {
+     :root {
         --big-font-size: 3rem;
         --h1-font-size: 2.225rem;
         --h2-font-size: 1.5rem;
@@ -83,7 +80,6 @@
 
 html {
     scroll-behavior: smooth;
-
 }
 
 body {
@@ -92,7 +88,9 @@ body {
     font-size: var(--normal-font-size);
     background-color: var(--body-color);
     color: var(--text-color);
-
+    position: relative;
+    min-height: 100vh;
+    padding-bottom: var(--mb-3);
 }
 
 h1,
@@ -109,7 +107,6 @@ ul {
 
 a {
     text-decoration: none;
-
 }
 
 img {
@@ -121,7 +118,8 @@ textarea {
     resize: vertical;
 }
 
-.fas, .fab{
+.fas,
+.fab {
     font-size: 1.5rem;
     color: var(--title-color);
 }
@@ -139,6 +137,7 @@ body.dark-theme {
     --scroll-thumb-color: hsl(var(--hue-color), 12%, 36%);
 }
 
+
 /*========== Button Dark/Light ==========*/
 
 .nav-btns {
@@ -147,7 +146,6 @@ body.dark-theme {
 }
 
 .change-theme {
-  
     color: var(--title-color);
     margin-right: var(--mb-1);
     cursor: pointer;
@@ -158,15 +156,11 @@ body.dark-theme {
 }
 
 
-
 /*==================== REUSABLE CSS CLASSES ====================*/
 
 .section {
     padding: var(--mb-2) 0 var(--mb-2);
-
-
 }
-
 
 .first-section {
     padding: 6rem 0 var(--mb-2);
@@ -200,7 +194,6 @@ body.dark-theme {
     background-color: var(--body-color);
     top: 0;
     bottom: initial;
-
 }
 
 
@@ -243,6 +236,7 @@ body.dark-theme {
     border: none;
 }
 
+
 /*==================== NAV ====================*/
 
 .nav {
@@ -268,7 +262,6 @@ body.dark-theme {
 }
 
 .nav-toggle {
-   
     cursor: pointer;
     margin-left: var(--mb-1-5);
 }
@@ -292,15 +285,14 @@ body.dark-theme {
 .nav-list {
     display: flex;
     column-gap: 2rem;
-   
 }
 
 .nav-menu {
     margin-left: auto;
     top: calc(var(--header-height) + 1.5rem);
     right: -100%;
-   
 }
+
 
 /* show menu */
 
@@ -308,11 +300,13 @@ body.dark-theme {
     right: 0;
 }
 
+
 /* Active link */
 
 .active-link {
     color: var(--first-color);
 }
+
 
 /* Change background header */
 
@@ -324,12 +318,14 @@ header {
     box-shadow: 0 -1px 4px rgb(0, 0, 0, .15);
 }
 
+
 /* Fin plantilla parte 1*/
+
+
 /*==================== BANNER ====================*/
 
 .banner {
     background-color: var(--first-color);
-
 }
 
 .banner-content {
@@ -349,7 +345,9 @@ header {
     color: var(--text-dark);
 }
 
+
 /*==================== Servicios ====================*/
+
 .servicios-content {
     grid-template-columns: 1fr 1fr 1fr;
     align-items: center;
@@ -362,15 +360,14 @@ header {
 }
 
 .servicio-icono {
-
- font-size: 64px;
- color: var(--first-color);
-  
+    font-size: 64px;
+    color: var(--first-color);
 }
 
 .servicio-title {
     padding: var(--mb-0-5) 0 var(--mb-0-5);
 }
+
 
 /*==================== Nosotros ====================*/
 
@@ -379,7 +376,6 @@ header {
 }
 
 .nosotros-content {
-
     text-align: center;
     color: var(--text-dark)
 }
@@ -388,6 +384,7 @@ header {
     color: var(--text-dark)
 }
 
+
 /*==================== Proyectos ====================*/
 
 .proyectos-content {
@@ -395,7 +392,6 @@ header {
     align-items: center;
     padding-top: 2.5rem;
     column-gap: 1.5rem;
-
 }
 
 .proyectos-content-proyecto {
@@ -406,24 +402,31 @@ header {
     padding: 0 0 var(--mb-0-5);
 }
 
+
 /*==================== Trabaja ====================*/
+
 .trabaja-content {
     text-align: center;
-
 }
 
 .trabaja-socials>a {
     margin-right: var(--mb-1-5);
 }
 
+
 /*==================== Footer ====================*/
+
 footer {
     padding-bottom: 1rem;
     padding-top: 1rem;
     text-align: center;
     background-color: var(--first-color);
     color: var(--text-dark);
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
+
 
 /* Pagina  de contacto*/
 
@@ -445,6 +448,7 @@ footer {
     margin: 0;
     padding: 0;
 }
+
 
 /* Pagina quienes somos */
 
@@ -468,13 +472,14 @@ footer {
     text-align: center;
 }
 
+
 /* Pagina proyectos */
+
 .proyectos-main {
     grid-template-columns: 1fr 1fr;
     align-items: center;
     padding-top: var(--mb-1-5);
     column-gap: 1.5rem;
-
 }
 
 .proyectos-main-proyecto>img {
@@ -496,24 +501,23 @@ footer {
 
 /* Comienzo plantilla parte 2*/
 
+
 /*==================== MEDIA QUERIES ====================*/
+
+
 /* For small devices */
+
 @media screen and (max-width: 768px) {
     .container {
         margin-left: var(--mb-1);
         margin-right: var(--mb-1);
     }
-
     .contact-data {
         grid-template-columns: 1fr;
-
     }
-
 }
 
-
 @media screen and (max-width: 668px) {
-
     .nav-menu {
         position: fixed;
         width: 100%;
@@ -522,12 +526,9 @@ footer {
         transition: .1s;
         height: 100%;
     }
-
     .nav-list {
         display: block;
-
     }
-
     .nav-link {
         display: flex;
         flex-direction: column;
@@ -537,65 +538,48 @@ footer {
         padding-top: var(--mb-1);
         padding-bottom: var(--mb-1);
     }
-
     .nav-toggle {
         display: block;
     }
-
-    
-
     .nosotros-main {
         grid-template-columns: 1fr;
         padding-top: 0;
     }
-
     .nosotros-main-img {
         display: none;
     }
-
-
 }
 
 @media screen and (max-width: 568px) {
-
-   
     .banner-content {
         grid-template-columns: 1fr;
-
     }
-
     .banner-content>div {
         text-align: center;
     }
-
     .banner-img {
         width: 300px;
     }
-
     .servicios-content {
         grid-template-columns: 1fr;
     }
-
     .proyectos-content {
         grid-template-columns: 1fr;
     }
-
     .proyectos-content-proyecto>div {
         padding-bottom: var(--mb-1);
     }
-
     .proyectos-content-proyecto>div>img {
         width: 300px;
     }
-
     .proyectos-main {
         grid-template-columns: 1fr;
-
     }
-
 }
 
+
 /*========== SCROLL BAR ==========*/
+
 ::-webkit-scrollbar {
     width: .60rem;
     background-color: var(--scroll-bar-color);
